--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Convite Romcom 💖</title>
-<link rel="stylesheet" href="love.css">
+<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
